# kpg-swing-analysis

./: .gitignore  README.md  pyproject.toml
data_static/: dyn_params.csv  line_catalog.csv
scripts/: analyze_batch_step.py  analyze_busfield_vs_network  analyze_generator_vs_params.py  analyze_injbus_centrality_corr.py  analyze_network_vs_response.py  main_batch_step.py
src/kpg_swing/: ARCHITECTURE_CONTRACT.md  paths.py
src/kpg_swing/core/: checks.py  linemap.py  loader.py  metrics.py
src/kpg_swing/engine/: bus_restore.py  busmap.py  dcflow.py  disturbance.py  events.py  internal_kron.py  islanding.py  swing_api.py
