[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpg-swing-v2"
version = "0.0.0"
description = "KPG swing simulation (v2 rebuild)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
